--- a/opensc-midicontrollers-model/opensc-midicontrollers-model.csproj
+++ b/opensc-midicontrollers-model/opensc-midicontrollers-model.csproj
@@ -5,12 +5,10 @@
       <RootNamespace>OpenSC</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-      <PackageReference Include="Sanford.Multimedia.Midi" Version="6.6.2">
-        <NoWarn>NU1701</NoWarn>
-      </PackageReference>
+      <PackageReference Include="Melanchall.DryWetMidi" Version="6.0.1" />
   </ItemGroup>
   <ItemGroup>
-      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
   </ItemGroup>
-  <Import Project="..\GlobalCsproj\*.csproj"/>
+  <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
