--- a/opensc-midicontrollers-gui/opensc-midicontrollers-gui.csproj
+++ b/opensc-midicontrollers-gui/opensc-midicontrollers-gui.csproj
@@ -7,13 +7,14 @@
       <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-      <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj"/>
-      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
-      <ProjectReference Include="..\opensc-midicontrollers-model\opensc-midicontrollers-model.csproj"/>
+      <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj" />
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
+      <ProjectReference Include="..\opensc-midicontrollers-model\opensc-midicontrollers-model.csproj" />
   </ItemGroup>
   <ItemGroup>
-      <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
-      <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0"/>
+      <PackageReference Include="Melanchall.DryWetMidi" Version="6.0.1" />
+      <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+      <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
       <Compile Update="GUI\Midi\MidiControllerEditorForm.cs">
@@ -23,5 +24,5 @@
          <SubType>Form</SubType>
       </Compile>
   </ItemGroup>
-  <Import Project="..\GlobalCsproj\*.csproj"/>
+  <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
