--- a/opensc-streams-gui/opensc-streams-gui.csproj
+++ b/opensc-streams-gui/opensc-streams-gui.csproj
@@ -9,13 +9,18 @@
       <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-      <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj"/>
-      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
-      <ProjectReference Include="..\opensc-streams-model\opensc-streams-model.csproj"/>
+      <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj" />
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
+      <ProjectReference Include="..\opensc-streams-model\opensc-streams-model.csproj" />
   </ItemGroup>
   <ItemGroup>
-      <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
-      <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0"/>
+      <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+      <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
-  <Import Project="..\GlobalCsproj\*.csproj"/>
+  <ItemGroup>
+    <Compile Update="GUI\Streams\HttpApiBasedStreamEditorFormBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
+  <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
