--- a/opensc-library-bmdvideohub/opensc-library-bmdvideohub.csproj
+++ b/opensc-library-bmdvideohub/opensc-library-bmdvideohub.csproj
@@ -2,13 +2,13 @@
   <PropertyGroup>
       <TargetFramework>net5.0</TargetFramework>
       <OutputType>Library</OutputType>
-      <RootNamespace>BMD.Videohub</RootNamespace>
-      <AssemblyName>BMD.Videohub</AssemblyName>
+      <RootNamespace>OpenSC.Library.BmdVideohub</RootNamespace>
+      <AssemblyName>OpenSC.Library.BmdVideohub</AssemblyName>
       <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-      <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
-      <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0"/>
+      <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+      <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
-  <Import Project="..\GlobalCsproj\*.csproj"/>
+  <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
