--- a/opensc-serialports-gui/opensc-serialports-gui.csproj
+++ b/opensc-serialports-gui/opensc-serialports-gui.csproj
@@ -8,11 +8,16 @@
       <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-      <ProjectReference Include="..\opensc-serialports-model\opensc-serialports-model.csproj"/>
+      <ProjectReference Include="..\opensc-serialports-model\opensc-serialports-model.csproj" />
   </ItemGroup>
   <ItemGroup>
-      <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
-      <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0"/>
+      <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+      <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
-  <Import Project="..\CommonCsproj\GuiModuleBase.csproj"/>
+  <ItemGroup>
+    <Compile Update="GUI\SerialPorts\SerialPortMonitorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
+  <Import Project="..\CommonCsproj\GuiModuleBase.csproj" />
 </Project>
