--- a/opensc-salvos-bridge-macros/opensc-salvos-bridge-macros.csproj
+++ b/opensc-salvos-bridge-macros/opensc-salvos-bridge-macros.csproj
@@ -1,17 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <OutputType>Library</OutputType>
     <RootNamespace>OpenSC</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
     <ProjectReference Include="..\opensc-salvos-model\opensc-salvos-model.csproj"/>
-    <ProjectReference Include="..\opensc-macros-model\opensc-macros-model.csproj"/>
-    <ProjectReference Include="..\opensc-routers-model\opensc-routers-model.csproj"/>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0"/>
   </ItemGroup>
-  <Import Project="..\GlobalCsproj\*.csproj"/>
+  <Import Project="..\opensc-macros-model\MacrosBridgeModuleBase.csproj"/>
 </Project>
